# us-patent-mcp-for-china-ecommerce

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  pytest.ini  setup.py
docs/plans/: 2026-02-10-fix-dependabot-security-vulnerabilities-plan.md
src/: __init__.py
src/patent_mcp_server/: __main__.py  config.py  constants.py  patents.py  prompts.py  resources.py
src/patent_mcp_server/copyright/: usco_client.py
src/patent_mcp_server/json/: search_query.json
src/patent_mcp_server/patentsview/: __init__.py  patentsview_client.py
src/patent_mcp_server/uspto/: api_uspto_gov.py  enriched_citation_client.py  litigation_client.py  office_action_client.py  ppubs_uspto_gov.py  ptab_client.py
src/patent_mcp_server/util/: errors.py  logging.py  response.py  validation.py
