[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-mcp-server"
version = "0.9.1"
description = "Model Context Protocol server for USPTO patent data"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    {name = "riemannzeta", email = "noreply@github.com"}
]
keywords = ["mcp", "model-context-protocol", "uspto", "patent", "patent-search", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "h2>=4.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.22",  # CVE-2026-24486 fix
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/riemannzeta/patent_mcp_server"
Repository = "https://github.com/riemannzeta/patent_mcp_server"
Issues = "https://github.com/riemannzeta/patent_mcp_server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0,<0.25.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["patent_mcp_server", "patent_mcp_server.uspto", "patent_mcp_server.util", "patent_mcp_server.patentsview"]

[tool.setuptools.package-data]
patent_mcp_server = ["json/*.json"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "jaraco-context>=6.1.0", # CVE-2026-23949 fix
    "pip-audit>=2.10.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
    "urllib3>=2.6.3", # CVE-2026-21441, CVE-2025-66418, CVE-2025-66471 fix
]

[project.scripts]
patent-mcp-server = "patent_mcp_server.patents:main"
